# cli_news_reader

./: .env  .gitignore  Cargo.toml  README.md
cli_news_reader/newsapi/src/: lib.rs
src/: main.rs  theme.rs
