[package]
name = "cli_news_reader"
version = "0.1.0"
edition = "2021"
description = "A simple CLI news reader app"
license = "MIT"
authors = ["Arman511"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26.1"
dotenv = "0.15.0"
json = "0.12.4"
newsapi = { path = "./newsapi", features = ["async"] }
reqwest = "0.11.18"
termimad = "0.23.1"
tokio = {version ="1.28.2", features = ["full"] }
